--- a/file.css
+++ b/file.css
@@ -1,1 +1,205 @@
+body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+}
 
+.menu-icon {
+    font-size: 1.5em;
+    cursor: pointer;
+    position: fixed;
+    top: 10px;
+    left: 15px;
+    z-index: 1000;
+    color: #333;
+   
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #8b00ff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidenav li {
+    padding: 15px;
+    text-align: center;
+}
+
+.sidenav a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.2em;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #ffd700; /* Change color on hover, e.g., gold */
+}
+
+.close-icon {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 2em;
+    cursor: pointer;
+    color: white;
+   
+}
+
+.content {
+    padding: 20px;
+}
+h1,h2{
+color:#8b00ff;
+}
+
+* {
+  box-sizing: border-box;
+}
+html, body {
+  margin: 0;
+  padding: 0;
+}
+body {
+  display: flex;
+  min-height: 220vh;
+  flex-direction: column;
+}
+main {
+  flex: 1 0 auto;
+}
+footer {
+  color: #fff;
+  background: #8b00ff;
+  position: relative; /* required to position the copyright at the bottom */
+  font-size: 80%;
+}
+.footer-copyright {
+  width: 100%;
+  height: 40px;
+  background: #222;
+  /* positions the copyright at the bottom of the footer */
+  padding: 10px;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+}
+.footer-body {
+  margin-bottom: 40px;
+  padding: 30px;
+}
+.footer-body > div:first-child {
+  font-size: 22px;
+}
+.footer-body ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+}
+.footer-body li > a {
+  color: white;
+  text-decoration: none;
+  margin-bottom: 7px;
+  font-size:17px;
+}
+
+a{
+text-decoration: none;
+color: #8b00ff;
+}
+#mycode{
+
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+border: 4px solid #ffffff;
+border-radius: 0.5rem;
+width: 85%;
+display: block;
+margin: 25px;
+background: black;
+height: 50%;
+}
+code{
+margin-bottom:10px;
+color: #ffffff;
+font-size: 10px;
+}
+p{
+
+font-family: 'Hedvig Letters Serif', serif;
+font-family: 'Playfair Display', serif;
+font-family: 'Roboto Mono', monospace;
+font-family: 'Roboto Slab', serif;
+font-size: 17px;
+
+}
+#icon{
+margin-left: 80%;
+
+width: 70px;
+
+}
+#discription{
+margin-left: 10px;
+
+}
+section{
+padding-bottom: 18%;
+
+
+}
+#link{
+color: blue;
+}
+#post{
+border: 1px solid #ffffff;
+box-shadow: 0 0 18px rgba(0,0,0,0.2);
+padding: 20px;
+display: block;
+width: 100%;
+}
+
+#main,#post::first-letter{
+color: #8b00ff;
+font-size: 20px;
+font-weight: bold;
+}
+small{
+
+font-size: 12px;
+bottom: 100px;
+color: #8b00ff;
+}
+#codehub{
+position: center;
+width: 30px;
+}
+#post-img{
+width: 100%;
+margin-bottom:7px;
+margin-top:10px;
+box-shadow: 0 0 2px rgba(0,0,0,0.3);
+border-radius: 0.5rem;
+}
+
+#tag{
+width: 70%;
+margin-bottom:7px;
+margin-top:10px;
+box-shadow: 0 0 2px rgba(0,0,0,0.3);
+border-radius: 0.5rem;
+}
